--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
         <nav id="navbar">
             <ul>
                 <header>Tech Docs</header>
-                <li> <a href="#part_one" class="nav-link" Link</li>
+                <li> <a href="#part_one" class="nav-link">Part One</a></li>
+                <li> <a href="#part_two" class="nav-link">Part Two</a></li>
+                <li> <a href="#part_three" class="nav-link">Part Three</a></li>
+                <li> <a href="#part_four" class="nav-link">Part Four</a></li>
+                <li> <a href="#part_five" class="nav-link">Part Five</a></li>
 
                 <li>Link</li><li>Link</li><li>Link</li><li>Link</li>
             </ul>
